Changed Page Titles+ Fixed Log In Page Nav-Bar alignment

--- a/CSS/login-page.css
+++ b/CSS/login-page.css
@@ -6,10 +6,11 @@
   font-family: 'Poppins', sans-serif;
 }
 html,body{
-  display: grid;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
-  place-items: center;
+  place-items:center;
   background: white;
 }
 
@@ -20,7 +21,8 @@ html,body{
 }
 .wrapper{
   overflow: hidden;
-  max-width: 390px;
+  align-items: center;
+  width: 24rem;
   background: #fff;
   padding: 30px;
   border-radius: 5px;
@@ -124,7 +126,6 @@ input[type="radio"]{
 }
 .form-inner form .field input:focus{
   border-color: rgb(5, 190, 5);
-  /* box-shadow: inset 0 0 3px #fb6aae; */
 }
 .form-inner form .field input::placeholder{
   color: #999;
@@ -138,7 +139,7 @@ form .field input:focus::placeholder{
 }
 .form-inner form .signup-link{
   text-align: center;
-  margin-top: 30px;
+  margin-top: 3rem;
 }
 .form-inner form .pass-link a,
 .form-inner form .signup-link a{
@@ -186,7 +187,7 @@ form .btn input[type="submit"]{
 .container{
   
   width: 100%;
-  min-height: 9vh;
+  min-height: 15vh;
   padding-left: 4%;
   padding-right: 6%;
   box-sizing: border-box;
@@ -204,7 +205,7 @@ form .btn input[type="submit"]{
 
 .logo{
   font-size: 2.2rem;
-  width: 400px;
+  width: 23.5rem;
   cursor:pointer;
   margin:20px 0;
 }
